# Agritech_Answers

./: .gitignore  Dockerfile  README.md  dockerignore  main.py  pyproject.toml  render.yaml
.github/workflows/: cd_api.yml  cd_gui.yml  cd_ui.yml  ci.yml  ci_api.yml
app/: api.py  helpers.py  logger.py  models.py  test_api.py
app/backend/: Dockerfile  dockerignore  pyproject.toml  render.yaml
app/backend/api/: helpers.py  logger.py  main.py  pydantic_models.py  test_main.py
app/backend/model/: ridge_pipeline.joblib
app/frontend/: Dockerfile  app.py  dockerignore  requirements.txt  ui_options.json
app/frontend/.streamlit/: config.toml
ml/model/: ridge_pipeline.joblib
ml/notebooks/: ade-on-crop-yield-prediction1.ipynb  advanced_eda_crop-yield-prediction.ipynb  eda-on-crop-yield-prediction.ipynb  eda-on-crop-yield-prediction_ml.ipynb  merge-agriculture&prediction-crop-yield.ipynb  reverse-merge-agriculture&prediction-crop-yield.ipynb
ml/notebooks/.ipynb_checkpoints/: P2C6_TP_cours_effectuees-checkpoint.ipynb  ade-on-crop-yield-production1-copy-checkpoint.ipynb  advanced_eda_crop-yield-prediction-checkpoint.ipynb  analyzing-crop-productivity-checkpoint.ipynb  data_sample2-checkpoint.cvs  eda-on-agriculture-crop-yield-checkpoint.ipynb  eda-on-crop-yield-prediction-checkpoint.ipynb  sample_data1-checkpoint
ml/src/: compare_datasets.py  compare_models.py  config.py  load_model.py  merge1_ablation.py  merge2_ablation.py  merge2_compare_models.py  ridge_check_datasets.py  train_final_model.py  tune_ridge.py  utils_app.py
