[project]
name = "agritech-answers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.18.4",
    "cufflinks>=0.17.3",
    "evidently>=0.7.21",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numba>=0.59.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "skl2onnx>=1.20.0",
    "skops>=0.13.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "streamlit>=1.56.0",
    "pytest-asyncio>=1.4.0",
    "streamlit-autorefresh>=1.0.1",
    "sympy>=1.14.0",
    "catboost>=1.2.10",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mlflow>=3.9.0",
    "snakeviz>=2.2.2",
    "pyinstrument>=5.1.2",
    "prince>=0.20.1",
]
