[project]
name = "crop-yield-api"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "pandas>=2.2.3",
    "numpy>=2.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
]
